--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
 	<h1>我的主页</h1>
 	{% for gallery in gallerys.all %}
 		{{ gallery.description }}
+		<img src="{{ gallery.img.url }}" alt="">
 	{% endfor %}
 </body>
 </html>
