--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
 </html> -->
 <!doctype html>
 <html lang="en">
+{% load staticfiles %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,10 +69,11 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Album example</h1>
+          <img src="{% static 'default.jpg' %}" width="20%" height="20%">
           <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
           <p>
             <a href="blog/" class="btn btn-primary my-2">我的博客</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="{% static 'resume.pdf' %}" class="btn btn-secondary my-2">我的简历</a>
           </p>
         </div>
       </section>
