--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <p class="text-muted">有一个小伙子在一个办公大楼的门口抽着烟，一个妇女路过他身边，并对他说， “你知道不知道这个东西会危害你的健康？我是说，你有没有注意到香烟盒上的那个警告（Warning）？” 小伙子说，“没事儿，我是一个程序员”。 那妇女说，“这又怎样？” 程序员说，“我们从来不关心Warning，只关心Error”</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
@@ -68,9 +68,10 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Album example</h1>
+          <h1 class="jumbotron-heading">个人博客</h1>
+          <br>
           <img src="{% static 'default.jpg' %}" width="20%" height="20%">
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <p class="lead text-muted">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;有一个小伙子在一个办公大楼的门口抽着烟，一个妇女路过他身边，并对他说， “你知道不知道这个东西会危害你的健康？我是说，你有没有注意到香烟盒上的那个警告（Warning）？” 小伙子说，“没事儿，我是一个程序员”。 那妇女说，“这又怎样？” 程序员说，“我们从来不关心Warning，只关心Error”</p>
           <p>
             <a href="blog/" class="btn btn-primary my-2">我的博客</a>
             <a href="{% static 'resume.pdf' %}" class="btn btn-secondary my-2">我的简历</a>
